# finance

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  README.md  docker-compose.yaml  pyproject.toml
docker/: docker-multiple-test-databases.sh
src/bond_service/: README.md  alembic.ini
src/bond_service/app/: config.py  main.py
src/bond_service/app/adapters/dao/: portfolio_dao.py
src/bond_service/app/adapters/interface/: bond_dao.py  portfolio_dao.py  portfolio_gateway.py
src/bond_service/app/adapters/postgres/: base.py  map.py  meta.py
src/bond_service/app/application/commands/: command.py  create_bond.py  create_operation.py  create_portfolio.py
src/bond_service/app/application/queries/: get_portfolio.py  get_portfolios.py  query.py
src/bond_service/app/applications/commands/: create_bond.py  create_operation.py  create_portfolio.py
src/bond_service/app/applications/queries/: get_portfolio.py  get_portfolio_info.py  get_portfolios.py
src/bond_service/app/configs/: config.py  logging.py
src/bond_service/app/controllers/rest_api/: app.py
src/bond_service/app/controllers/web_api/: app.py
src/bond_service/app/di/: container.py  factories.py  ioc.py
src/bond_service/app/domain/: bond.py  portfolio.py
src/bond_service/app/domains/: bond.py  const.py  portfolio.py
src/bond_service/tests/: conftest.py
src/bond_service/tests/integration/: conftest.py  test_bond.py  test_portfolio.py
src/bond_service/tests/integration/configs/: config.py
src/bond_service/tests/integration/migration/: conftest.py  test_stairway.py
src/bond_service/tests/integration/utils/: create_database.py  delete_database.py  provider.py
src/main_service/: alembic.ini
src/main_service/app/: config.py  main.py
src/main_service/app/adapters/: UOW.py  bond_dao.py  bond_repo.py  portfolio_dao.py  unit_of_work.py
src/main_service/app/adapters/interface/: bond_dao.py  (+1 more)
src/main_service/app/di/: container.py  factories.py
src/main_service/app/domain/: bond.py  exeption.py  operation.py  portfolio.py  portfolioaggregate.py
src/main_service/migration/: env.py
src/main_service/migration/versions/: 2024_02_26_1533-9044381187bb_create_tables.py  2024_02_29_2100-e15ff62aa4c6_init.py  2024_03_14_1033-267a05e2d8f0_init.py
src/main_service/tests/: conftest.py  test_bond.py  test_home.py  test_stairway.py
src/main_service/tests/integration/: conftest.py  test_bond.py  test_operation.py  test_portfolio.py
src/portfolio_service/app/configs/: config.py
src/portfolio_service/app/di/: ioc.py
src/portfolio_service/app/domains/: portfolio.py
src/portfolio_service/tests/: conftest.py
src/portfolio_service/tests/integrations/: conftest.py  test_home.py  test_portfolio.py
template/: README.md  cookiecutter.json
template/{{cookiecutter.project_slug}}/app/: main.py
template/{{cookiecutter.project_slug}}/app/configs/: config.py
template/{{cookiecutter.project_slug}}/app/di/: ioc.py
template/{{cookiecutter.project_slug}}/tests/integrations/: conftest.py
(+83 files in other folders)
