[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[project]
name = "main"
version = "0.0.1"
authors = []
description = "My service"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "uvicorn",
    "alembic",
    'psycopg2 ; platform_system != "Linux"',
    "structlog",
    "asyncpg",
    "requests",
    "aiohttp",
    "httpx",
    "uuid6",
    "dishka",
    "fastapi",
    'psycopg2-binary ; platform_system != "Windows"',
]
[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "mimesis",
]
lint = [
    "ruff",
    "pre-commit",
]


[tool.black]
line-length = 119
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 119
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
ensure_newline_before_comments = true
