[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[project]
name = "main"
version = "0.0.1"
authors = []
description = "My service"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "uvicorn",
    "alembic",
    'psycopg2 ; platform_system != "Linux"',
    "structlog",
    "asyncpg",
    "requests",
    "aiohttp",
    "httpx",
    "uuid6",
    "dishka",
    "fastapi",
    'psycopg2-binary ; platform_system != "Windows"',
]
[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "mimesis",
    "pytest-xdist",
]
lint = [
    "ruff",
    "pre-commit",
    "vulture",
]
arch = [
    "cookiecutter",
]
